lab1/Test/L1-A-10-85.cmm
float bCqi1bqi_4t9L ( ) {
  while ( HAxIK )   eG5pC2zW11oEPZfN623f = JnwrHNi2tiGL8nbL 
    || YbMSqmfv && rDhNNWU9Es0FzR6 < p_VRljJEsPCWD7Mllxac 
    - xtrHcdd7qE / ! - VyKK2ajLRp6n_cSgeKI [ qB5aHYvb 
    = K * xFVAuZJZu15fKBN ( _9yrGXUYLaYBV , ll0rz7VX77 
    > JRAyChTe3qSQV6KzcjS7 - - SN [ _NZoeO8hpyc = Enskl1q8ScE 
    = OUMiEtuhu && xN_BkL <= - ( dy6NzHz = VyTQ46vF || 
    f6xtX5 != hebbweoDx5Is4_X == ! e_ZtzjStjJ2 ) ] / 718790952.786737414 
    @>= v1BqboRrj4 ( ) . LncbnPuKwC ) ] + 1247801521 ;

}
struct mc8dZU {
  int RI5SE0ZJ , t4qrhH = JrCMK ;
}aRcewZRZ8xbIOZ , LwWlplZgzg [ 887971682 ] 

;
int ;
int ;
int V ( struct {
}g_Hb8lheWZL ) {
  struct GaVxiJjnAMWyjw6f3 p9tGyMdx6SjmtU7 ;
  int EHlxQ8AEpbmenU4d ;
}
int lbfuEej7vuxZH7gAi78 ( ) {
  if ( Dw ) '  h ;
else   if ( e1yor4xOKvrC9x ) {
    if ( K1KjAO3_CEssVZ )     if ( KjVYy )     uKOrd 
      ;
else     return r5Xl ;


  }

}
int ;
int iJZNWJf_iqqXnIwqdkL ( int Aelyb31CvDdxQn , int 
  HHJHFbI ) {
else }
